[package]
name = "untitled-sdl-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14.0"
rand = "*"

[dependencies.sdl2]
sdl2 = "0.34.3"
features = ["ttf"]

[[example]]
name = "adjustable_box"
path = "./examples/adjustable_boxes.rs"

[[example]]
name = "random_boxes_and_text"
path = "./examples/random_colour_text_over_random_boxes.rs"
